--- a/dl,dt,dd.html
+++ b/dl,dt,dd.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Single+Day&display=swap"
         rel="stylesheet"> -->
 
-    <title>dl,dt,dd</title>
+    <title> ANMINA </title>
     <style>
         /* * {
             margin: 0;
